projects overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,5 @@
 }
 
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
